# machine_learning_geron

./: .gitignore  README.md  linear_model.ipynb  pyproject.toml
02_machine_learning_project/: 02_end_to_end_ml_project.ipynb
03_classification/: 03_notebook.ipynb
