[tool.poetry]
name = "machine-learning-geron"
version = "0.1.0"
description = ""
authors = ["beckspark <stephenpbeck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
ipykernel = "^6.26.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
